Style <code> elements

--- a/box-model.html
+++ b/box-model.html
@@ -83,7 +83,7 @@
     <main>
       <article>
         <header>
-          <h2>The Box Model</h2>
+          <h2>Box Model</h2>
           <div class="byline-wrapper">
             <img src="images/avatar.png" alt="avatar" width="40">
             <p>
@@ -190,27 +190,25 @@
             want to reset in CSS as shown below.
           </p>
           <h5>CSS</h5>
-          <div class="code-wrapper">
-            <p>
-              /* Reset browser defaults */<br>
-              html, body, div, span, applet, object, iframe, h1, h2, h3, h4,<br> 
-              h5, h6, p, blockquote, pre, a, abbr, acronym, address, big,<br> 
-              cite, code, del, dfn, img, ins, kbd, q, s, samp, small,<br> 
-              strike, sub, sup, tt, var, u, dl, dt, dd, ol, ul, li,<br> 
-              fieldset, form, label, legend, table, caption, tbody, tfoot,<br>
-              thead, tr, th, td, article, aside, canvas, details, embed,<br>
-              figure, figcaption, footer, header, hgroup, menu, nav, output,<br> 
-              ruby, section, summary, time, mark, audio, video, em, i, b,<br> 
-              strong {<br>
-              &nbsp;&nbsp;margin: 0;<br>
-              &nbsp;&nbsp;padding: 0;<br>
-              &nbsp;&nbsp;border: 0;<br>
-              &nbsp;&nbsp;font-size: 100%;<br>
-              &nbsp;&nbsp;font: inherit;<br>
-              &nbsp;&nbsp;vertical-align: baseline;<br>
-              }
-            </p>
-          </div>
+          <code>
+            /* Reset browser defaults */<br>
+            html, body, div, span, applet, object, iframe, h1, h2, h3, h4,<br> 
+            h5, h6, p, blockquote, pre, a, abbr, acronym, address, big,<br> 
+            cite, code, del, dfn, img, ins, kbd, q, s, samp, small,<br> 
+            strike, sub, sup, tt, var, u, dl, dt, dd, ol, ul, li,<br> 
+            fieldset, form, label, legend, table, caption, tbody, tfoot,<br>
+            thead, tr, th, td, article, aside, canvas, details, embed,<br>
+            figure, figcaption, footer, header, hgroup, menu, nav, output,<br> 
+            ruby, section, summary, time, mark, audio, video, em, i, b,<br> 
+            strong {<br>
+            &nbsp;&nbsp;margin: 0;<br>
+            &nbsp;&nbsp;padding: 0;<br>
+            &nbsp;&nbsp;border: 0;<br>
+            &nbsp;&nbsp;font-size: 100%;<br>
+            &nbsp;&nbsp;font: inherit;<br>
+            &nbsp;&nbsp;vertical-align: baseline;<br>
+            }
+          </code>
           <p>
             It's important to start from a baseline and not let the browser 
             determine what your defaults are. You need to be sure that the CSS 
@@ -237,20 +235,17 @@
             HTML element.
           </p>
           <h5>CSS</h5>
-          <div class="code-wrapper">
-            <p>
-              /* Display an element as an inline element */<br>
-              <i>element</i> {<br>
-              &nbsp;&nbsp;display: inline;<br>
-              }
-            </p>
-            <p>
-              /* Display an element as a block element */<br>
-              <i>element</i> {<br>
-              &nbsp;&nbsp;display: block;<br>
-              }
-            </p>
-          </div>
+          <code>
+            /* Display an element as an inline element */<br>
+            <i>element</i> {<br>
+            &nbsp;&nbsp;display: inline;<br>
+            }<br>
+            <br>
+            /* Display an element as a block element */<br>
+            <i>element</i> {<br>
+            &nbsp;&nbsp;display: block;<br>
+            }
+          </code>
         </section>
         <section>
           <h3>Centering Content</h3>
@@ -261,23 +256,19 @@
           	to <i>auto</i>.
           </p>
           <h5>CSS</h5>
-          <div class="code-wrapper">
-            <p>
-            	<i>.class</i> {<br>
-      				&nbsp;&nbsp;margin: 0 auto 0 auto;<br>
-   						}
-   					</p>
-   					<p>
-   						<i>element</i> {<br>
-   						&nbsp;&nbsp;margin: 0 auto 0 auto;<br>
-   						}
-   					</p>
-   					<p>
-            	h1 {<br>
-        			&nbsp;&nbsp;margin: 0 auto 0 auto;<br>
-       				}
-       			</p>
-   				</div>
+          <code>
+            <i>.class</i> {<br>
+      			&nbsp;&nbsp;margin: 0 auto 0 auto;<br>
+   					}<br>
+   					<br>
+   					<i>element</i> {<br>
+   					&nbsp;&nbsp;margin: 0 auto 0 auto;<br>
+   					}<br>
+   					<br>
+   					h1 {<br>
+        		&nbsp;&nbsp;margin: 0 auto 0 auto;<br>
+       			}
+       		</code>
    				<h4>Center the content that's inside of a block-level tag</h4>
    				<p>
    					If you want to center the content that's inside of a block-level 
@@ -285,13 +276,11 @@
    					<i>center</i>.
    				</p>
    				<h5>CSS</h5>
-          <div class="code-wrapper">
-            <p>
-            	h1 {<br>
-        			&nbsp;&nbsp;text-align: center;<br>
-       				}
-       			</p>
-       		</div>
+          <code>
+            h1 {<br>
+        		&nbsp;&nbsp;text-align: center;<br>
+            }
+       	  </code>
        	</section>
 			</article>
     </main>
