--- a/new-elements.html
+++ b/new-elements.html
@@ -157,7 +157,7 @@
 						&nbsp;&nbsp;&lt;p&gt;Covering all the Art Galleries across the globe
 						&lt;/p&gt;<br>
 						&lt;/header&gt;
-					</code>>
+					</code>
 					<p>
 						The HTML5 implementation makes the document more 
 						<strong>semantic</strong>.
@@ -209,7 +209,7 @@
 						&gt;PictureElement&lt;/a&gt;<br>
 						&nbsp;&nbsp;&lt;/address&gt;<br>
 						&nbsp;&nbsp;&lt;p&gt;Copyright PictureElement 2017&lt;/p&gt;<br>
-						&lt;\footer&gt;
+						&lt;/footer&gt;
 					</code>
 				</section>
 				<section>
