--- a/new-input-attributes.html
+++ b/new-input-attributes.html
@@ -212,8 +212,13 @@
 					<h5>HTML5</h5>
 					<code>
 						&lt;form&gt;<br>
-						&nbsp;&nbsp;Country code: &lt;input type="text" name="two-letter_country_code" pattern="[A-Za-z]{2}" title="Two-letter country code"&gt;<br>
-						&nbsp;&nbsp;Telephone: &lt;input type="tel" name="tel_number" pattern="[0-9]{10}" title="10-digit tel. number"&gt;<br>
+						&nbsp;&nbsp;Country code:<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;input type="text" 
+						name="two-letter_country_code" pattern="[A-Za-z]{2}"<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;title="Two-letter country code"&gt;<br>
+						&nbsp;&nbsp;Telephone:<br> 
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;input type="tel" name="tel_number" 
+						pattern="[0-9]{10}" title="10-digit tel. number"&gt;<br>
 						&lt;/form&gt;
 					</code>
 					<h5>Result</h5>
