--- a/updated-elements.html
+++ b/updated-elements.html
@@ -95,6 +95,7 @@
 				</header>
 				<section>
 					<h4>Example:</h4>
+					<h5>HTML</h5>
 					<code>
 						&lt;!DOCTYPE html&gt; (1)<br>
 						&lt;html&gt;<br>
