Change valid CSS logo to a SVG, Add GPLv3 license SVG logo

--- a/html-common-mistakes.html
+++ b/html-common-mistakes.html
@@ -162,7 +162,14 @@
       <address>
         &copy; 2017 <a href="">Marios Sofokleous</a>
       </address>
-      <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"> 
+      <img 
+      	src="images/valid-css.svg"
+      	alt="valid CSS logo"
+      	width="100">
+      <img 
+      	src="images/GPLv3-logo.svg"
+      	alt="GPLv3 license logo"
+      	width="100">
     </footer>
   </body>
 </html>
