--- a/box-model.html
+++ b/box-model.html
@@ -21,7 +21,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-  	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
   	<link rel="stylesheet" href="main.css">
 		<title>CSS/Box Model</title>
 	</head>
@@ -303,7 +303,14 @@
       <address>
         &copy; 2017 <a href="">Marios Sofokleous</a>
       </address>
-      <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"> 
+      <img 
+      	src="images/valid-css.svg"
+      	alt="valid CSS logo"
+      	width="100">
+      <img 
+      	src="images/GPLv3-logo.svg"
+      	alt="GPLv3 license logo"
+      	width="100">
     </footer>
   </body>
 </html>
