--- a/elements.html
+++ b/elements.html
@@ -135,25 +135,32 @@
 			</article>
 		</main>
 		<footer>
-			<a href="">
-				<img src="images/googleplus-logo.png" alt="google plus logo" width="30" class="social-icon">
-			</a>
-			<a href="">
-				<img src="images/fb-logo.png" alt="facebook logo" width="30" class="social-icon">
-			</a>
-			<a href="">
-				<img src="images/instagram-logo.png" alt="instagram logo" width="30" class="social-icon">
-			</a>
-			<a href="">
-				<img src="images/linkedin-logo.png" alt="linkedin logo" width="30" class="social-icon">
-			</a>
-			<a href="">
-				<img src="images/twitter-logo.png" alt="twitter logo" width="30" class="social-icon">
-			</a>
-  		<address>
-    		&copy; 2017 <a href="">Marios Sofokleous</a>
-  		</address>
-  		<img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"> 
-		</footer>
+      <a href="">
+        <img src="images/googleplus-logo.png" alt="google plus logo" width="30" class="social-icon">
+      </a>
+      <a href="">
+        <img src="images/fb-logo.png" alt="facebook logo" width="30" class="social-icon">
+      </a>
+      <a href="">
+        <img src="images/instagram-logo.png" alt="instagram logo" width="30" class="social-icon">
+      </a>
+      <a href="">
+        <img src="images/linkedin-logo.png" alt="linkedin logo" width="30" class="social-icon">
+      </a>
+      <a href="">
+        <img src="images/twitter-logo.png" alt="twitter logo" width="30" class="social-icon">
+      </a>
+      <address>
+        &copy; 2017 <a href="">Marios Sofokleous</a>
+      </address>
+      <img 
+      	src="images/valid-css.svg"
+      	alt="valid CSS logo"
+      	width="100">
+      <img 
+      	src="images/GPLv3-logo.svg"
+      	alt="GPLv3 license logo"
+      	width="100">
+    </footer>
 	</body>
 </html>
