--- a/selectors.html
+++ b/selectors.html
@@ -281,9 +281,16 @@
         <img src="images/twitter-logo.png" alt="twitter logo" width="30" class="social-icon">
       </a>
       <address>
-      	&copy; 2017 <a href="">Marios Sofokleous</a>
+        &copy; 2017 <a href="">Marios Sofokleous</a>
       </address>
-      <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"> 
+      <img 
+      	src="images/valid-css.svg"
+      	alt="valid CSS logo"
+      	width="100">
+      <img 
+      	src="images/GPLv3-logo.svg"
+      	alt="GPLv3 license logo"
+      	width="100">
     </footer>
   </body>
 </html>
