Remove code sections outside of borders

--- a/styles.html
+++ b/styles.html
@@ -357,50 +357,66 @@
           <ol>
           	<li>
           		<p>Sharp shadow edge (no blur):</p>
+          		<code>
+          			box-shadow: 5px 10px black;
+          		</code>
           		<div class="box-shadow-1">
-          			box-shadow: 5px 10px #000;
           		</div>
           	</li>
           	<li>
           		<p>Sharp shadow edge (no blur):</p>
+          		<code>
+          			box-shadow: -5px 10px black;
+          		</code>
           		<div class="box-shadow-2">
-          			box-shadow: -5px 10px #000;
           		</div>
           	</li>
           	<li>
           		<p>Sharp shadow edge (no blur):</p>
+          		<code>
+          			box-shadow: 5px -10px black;
+          		</code>
           		<div class="box-shadow-3">
-          			box-shadow: 5px -10px #000;
           		</div>
           	</li>
           	<li>
           		<p>Sharp shadow edge (no blur):</p>
+          		<code>
+          			box-shadow: -5px -10px black;
+          		</code>
           		<div class="box-shadow-4">
-          			box-shadow: -5px -10px #000;
           		</div>
           	</li>
           	<li>
           		<p>Specify a blur radius:</p>
+          		<code>
+          			box-shadow: 5px 10px 5px black;
+          		</code>
           		<div class="box-shadow-5">
-          			box-shadow: 5px 10px 5px #000;
           		</div>
           	</li>
           	<li>
           		<p>Specify a spread radius (expand shadow):</p>
+          		<code>
+          			box-shadow: 5px 10px 5px 5px black;
+          		</code>
           		<div class="box-shadow-6">
-          			box-shadow: 5px 10px 5px 5px #000;
           		</div>
           	</li>
           	<li>
           		<p>Specify a spread radius (shrink shadow):</p>
+          		<code>
+          			box-shadow: 5px 10px 5px -5px black;
+          		</code>
           		<div class="box-shadow-7">
-          			box-shadow: 5px 10px 5px -5px #000;
           		</div>
           	</li>
           	<li>
           		<p>Specify a spread radius instead of blur-radius:</p>
+          		<code>
+          			box-shadow: 5px 10px 0 5px black;
+          		</code>
           		<div class="box-shadow-8">
-          			box-shadow: 5px 10px 0 5px #000;
           		</div>
           	</li>
           	<li>
