Replace <h1> and <div class=tagline> with website logo

--- a/whats-new.html
+++ b/whats-new.html
@@ -27,10 +27,12 @@
 	</head>
 	<body>
 		<header>
-			<h1>HTML5Tech</h1>
-			<div class="tagline">
-				<h4>Fundamental resources about HTML5 &amp; friends</h4>
-			</div>
+			<img class="website-logo" src="images/logomakr_9fa58h.png" alt="website logo" width="400">
+      <!--
+      <div class="tagline">
+        <h5>Fundamental resources about HTML5 &amp; friends</h5>
+      </div>
+      -->
 			<nav>
       	<a id="current" href="home.html">Home</a>
       	<div class="dropdown">
