--- a/color.html
+++ b/color.html
@@ -262,19 +262,31 @@
             </li>
             <li>
             	<b>hsl(120, 100%, 50%)</b><br>
-            	*The colors is green.
+            	*The color is green.
             </li>
             <li>
             	<b>hsl(180, 100%, 50%)</b><br>
-            	*The colors is cyan.
+            	*The color is cyan.
             </li>
             <li>
             	<b>hsl(240, 100%, 50%)</b><br>
-            	*The colors is blue.
+            	*The color is blue.
             </li>
             <li>
             	<b>hsl(300, 100%, 50%)</b><br>
-            	*The colors is magenta.
+            	*The color is magenta.
+            </li>
+            <li>
+            	<b>hsla(300, 100%, 50%, 0.05)</b><br>
+            	*The color is 5% opaque magenta.
+            </li>
+            <li>
+            	<b>hsla(300, 100%, 50%, 0.5)</b><br>
+            	*The color is 50% opaque magenta.
+            </li>
+            <li>
+            	<b>hsla(300, 100%, 50%, 1)</b><br>
+            	*The color is full opaque magenta.
             </li>
           </ol>
      		</section>
