Add 'Opacity' section to styles.html

--- a/color.html
+++ b/color.html
@@ -224,7 +224,12 @@
           <h3>HSL Color Model</h3>
           <h4>Description</h4>
           <p>
-          	Colors can also be defined via HUE, SATURATION, and LIGHTNESS, or HSL. Hue is represented as an angle of the color circle. By definition pure red=0(or 360), pure green=120, pure blue=240. Saturation and lightness are represented as percentages. 100% is full saturation, and 0% is a shade of gray. 100% ligthness is white, 0% lightness is black, and 50% lightness is normal. 
+          	Colors can also be defined via HUE, SATURATION, and LIGHTNESS, or 
+            HSL. Hue is represented as an angle of the color circle. By 
+            definition pure red=0(or 360), pure green=120, pure blue=240. 
+            Saturation and lightness are represented as percentages. 100% is 
+            full saturation, and 0% is a shade of gray. 100% ligthness is white, 
+            0% lightness is black, and 50% lightness is normal. 
           </p>
           <h4>hsl()</h4>
          	<p><b>hsl(<i>hue,saturation,lightness</i>)</b></p>
