Add gradients section to styles.html

--- a/color.html
+++ b/color.html
@@ -242,7 +242,7 @@
          		</li>
          	</ul>
          	<h4>hsla()</h4>
-         	<p><b>hsl(<i>hue,saturation,lightness,a</i>)</b></p>
+         	<p><b>hsla(<i>hue,saturation,lightness,a</i>)</b></p>
          	<p>where:</p>
          	<ul>
          		<li>0 &le; <i>hue</i> &le; 360</li>
