--- a/fonts.html
+++ b/fonts.html
@@ -42,7 +42,7 @@
       			<a href="images.html">Images</a>
       			<a href="html-common-mistakes.html">Common Mistakes</a>
       			<a href="forms.html">Forms</a>
-      			<a href="">5</a>
+      			<a href="tables.html">Tables</a>
       			<a href="">6</a>
       		</div>
       	</div>
